<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>qSlicerSpatialObjectsGlyphWidget</class>
 <widget class="qSlicerWidget" name="qSlicerSpatialObjectsGlyphWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>410</width>
    <height>243</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QFormLayout" name="formLayout">
   <property name="fieldGrowthPolicy">
    <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
   </property>
   <item row="0" column="0">
    <widget class="QLabel" name="GlyphTypeLabel">
     <property name="text">
      <string>Glyph Type</string>
     </property>
    </widget>
   </item>
   <item row="0" column="1">
    <widget class="QComboBox" name="GlyphTypeSelector">
     <property name="sizePolicy">
      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="duplicatesEnabled">
      <bool>false</bool>
     </property>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="ScaleFactorLabel">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="font">
      <font>
       <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
     <property name="text">
      <string>Scale factor</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="ctkSliderWidget" name="ScaleFactorSlider" native="true">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="decimals" stdset="0">
      <number>0</number>
     </property>
     <property name="singleStep" stdset="0">
      <double>1.000000000000000</double>
     </property>
     <property name="pageStep" stdset="0">
      <double>1.000000000000000</double>
     </property>
     <property name="maximum" stdset="0">
      <double>100.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QLabel" name="SpacingLabel">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="font">
      <font>
       <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
     <property name="text">
      <string>Spacing</string>
     </property>
    </widget>
   </item>
   <item row="2" column="1">
    <widget class="ctkSliderWidget" name="SpacingSlider" native="true">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="decimals" stdset="0">
      <number>0</number>
     </property>
     <property name="singleStep" stdset="0">
      <double>1.000000000000000</double>
     </property>
     <property name="pageStep" stdset="0">
      <double>1.000000000000000</double>
     </property>
     <property name="maximum" stdset="0">
      <double>50.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="3" column="0" colspan="2">
    <widget class="QStackedWidget" name="GlyphSubPropertiesWidget">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
     </property>
     <property name="currentIndex">
      <number>0</number>
     </property>
     <widget class="QWidget" name="Lines"/>
     <widget class="QWidget" name="Tubes">
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
        <widget class="QLabel" name="GlyphSidesLabel">
         <property name="enabled">
          <bool>true</bool>
         </property>
         <property name="font">
          <font>
           <weight>50</weight>
           <bold>false</bold>
          </font>
         </property>
         <property name="text">
          <string>Number of Sides</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="ctkSliderWidget" name="GlyphSidesSlider" native="true">
         <property name="enabled">
          <bool>true</bool>
         </property>
         <property name="decimals" stdset="0">
          <number>0</number>
         </property>
         <property name="singleStep" stdset="0">
          <double>1.000000000000000</double>
         </property>
         <property name="pageStep" stdset="0">
          <double>1.000000000000000</double>
         </property>
         <property name="minimum" stdset="0">
          <double>3.000000000000000</double>
         </property>
         <property name="maximum" stdset="0">
          <double>10.000000000000000</double>
         </property>
         <property name="value" stdset="0">
          <double>3.000000000000000</double>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="GlyphRadiusLabel">
         <property name="enabled">
          <bool>true</bool>
         </property>
         <property name="font">
          <font>
           <weight>50</weight>
           <bold>false</bold>
          </font>
         </property>
         <property name="text">
          <string>Radius</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
        <widget class="ctkSliderWidget" name="GlyphRadiusSlider" native="true">
         <property name="enabled">
          <bool>true</bool>
         </property>
         <property name="singleStep" stdset="0">
          <double>0.100000000000000</double>
         </property>
         <property name="maximum" stdset="0">
          <double>1.000000000000000</double>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="Ellipsoids"/>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>qSlicerWidget</class>
   <extends>QWidget</extends>
   <header>qSlicerWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>ctkSliderWidget</class>
   <extends>QWidget</extends>
   <header>ctkSliderWidget.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections>
  <connection>
   <sender>GlyphTypeSelector</sender>
   <signal>currentIndexChanged(QString)</signal>
   <receiver>GlyphSubPropertiesWidget</receiver>
   <slot>setWindowTitle(QString)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>301</x>
     <y>13</y>
    </hint>
    <hint type="destinationlabel">
     <x>205</x>
     <y>220</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
